[WIP][OPENJPA-2940] TCK: Schema generation improvements
                      - Add SpecCompliantSchemaGeneration flag to suppress buildSchema when
                        JPA schema generation properties are explicitly provided
                      - Add standalone openjpa.SpecCompliantSchemaGeneration property to work
                        around TCK property parser truncation of values containing '='
                      - Generate FK constraints for @ForeignKey on @JoinTable and @JoinColumn
                      - Support per-column ASC/DESC sort direction in CREATE INDEX DDL
                      - Make script execution resilient to errors (table exists/not found)
                      - Add docker-compose.yml for PostgreSQL TCK testing
                      - Add SchemaGenerationScripts integration tests